--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.hero {
+  text-align: center;
+  padding: 4rem 2rem;
+  background: linear-gradient(135deg, #6366f1 0%,rgb(99, 95, 175, 0.3) 100%), url('/Columns.jpg');
+  background-size: cover;
+  color: white;
+  border-radius: 1rem;
+  margin-bottom: 3rem;
+}
